examples/kubernetes/simple-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app-service
  labels:
    app: simple-web-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: simple-web-app
---
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app-nodeport
  labels:
    app: simple-web-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: simple-web-app
